@@ -52,6 +52,13 @@ COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_ALPHA="Alpha"
 COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_BETA="Beta"
 COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_RC="Release Candidate"
 COM_PODCASTMANAGER_CONFIG_LIVEUPDATE_STABILITY_STABLE="Stable"
+COM_PODCASTMANAGER_CONFIG_OPTION_NONE="None"
+COM_PODCASTMANAGER_CONFIG_TRACKING_DESCRIPTION="If you are using a third party statistics tracking service, you can select it here."
+COM_PODCASTMANAGER_CONFIG_TRACKING_LABEL="Statistics Tracking Service"
+COM_PODCASTMANAGER_CONFIG_TRACKING_OPTION_BLUBRRY="Blubrry"
+COM_PODCASTMANAGER_CONFIG_TRACKING_OPTION_PODTRAC="PodTrac"
+COM_PODCASTMANAGER_CONFIG_FIELD_TRACKNAME_DESCRIPTION="If the tracking service you've selected requires an username, enter it here."
+COM_PODCASTMANAGER_CONFIG_FIELD_TRACKNAME_LABEL="Username for Tracking Service"
 COM_PODCASTMANAGER_CONFIRM_FEED_DELETE="Are you sure you want to delete this feed?  Failing to unpublish the feed and block iTunes updates may cause subscribers to receive errors."
 COM_PODCASTMANAGER_CONFIRM_PODCAST_UNPUBLISH="Unpublishing files may disrupt the feed.  Are you sure you wish to continue unpublishing? (Files will not be removed.)"
 COM_PODCASTMANAGER_DIRECTION_ASC_LABEL="Ascending"
