@@ -1,3 +1,6 @@
+2-October-2012 Michael Babker
++ [#63] Add Blubrry and Podtrac tracking services
+
 24-August-2012 Michael Babker
 ~ Update MediaElement.JS to 2.9.3
 ~ Joomla! 3.0 compatibility changes
